--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "finance-frontend": {
+    "angular6-electron": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,19 +13,29 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/finance-frontend",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/favicon.png",
+              "src/favicon.icns",
+              "src/favicon.256x256.png",
+              "src/favicon.512x512.png",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap-grid.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -50,18 +60,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "finance-frontend:build"
+            "browserTarget": "angular6-electron:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "finance-frontend:build:production"
+              "browserTarget": "angular6-electron:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "finance-frontend:build"
+            "browserTarget": "angular6-electron:build"
           }
         },
         "test": {
@@ -95,7 +105,7 @@
         }
       }
     },
-    "finance-frontend-e2e": {
+    "angular6-electron-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +113,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "finance-frontend:serve"
+            "devServerTarget": "angular6-electron:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "finance-frontend:serve:production"
+              "devServerTarget": "angular6-electron:serve:production"
             }
           }
         },
@@ -123,5 +133,5 @@
       }
     }
   },
-  "defaultProject": "finance-frontend"
+  "defaultProject": "angular6-electron"
 }
