--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng2-charts": "^2.0.0-beta.4",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
