--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "angular-bootstrap-md": "^6.3.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
