--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^8.1.1",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^8.1.1",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
@@ -28,6 +30,7 @@
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ng2-charts": "^2.0.0-beta.4",
     "popper.js": "^1.14.4",
